# first_principles_data

./: .gitmodules  FP2 с исправлениями.docx  FP2012с исправлениями.docx  FP2015 [ред. Борисов-Пометун 8 фев].docx  FP2015.docx  keys.txt  sergiy_pometun.keystore  Первые принципы v_1.19.doc
Bible_Russian_NRT/: 01_genesis.htm  02_exodus.htm  03_leviticus.htm  04_numbers.htm  05_deuteronomy.htm  06_joshua.htm  07_judges.htm  08_ruth.htm  09_1samuel.htm  10_2samuel.htm  11_1kings.htm  12_2kings.htm  13_1chronicles.htm  14_2chronicles.htm  15_ezra.htm  16_nehemiah.htm  17_esther.htm  18_job.htm  19_psalms.htm  20_proverbs.htm  21_ecclesiastes.htm  22_songofsolomon.htm  23_isaiah.htm  24_jeremiah.htm  25_lamentations.htm  26_ezekiel.htm  27_daniel.htm  28_hosea.htm  29_joel.htm  30_amos.htm  31_obadiah.htm  32_jonah.htm  33_micah.htm  34_nahum.htm  35_habakkuk.htm  36_zephaniah.htm  37_haggai.htm  38_zechariah.htm  39_malachi.htm  40_matthew.htm  (+27 more)
fp_original/: index.html  theword.html
html/: afterbaptismnowwhat.html  afterbaptismnowwhat.json  afterbaptismnowwhat_lang.html  baptismholyspirit.json  baptismholyspirit_lang.html  bestfriendsofalltime.json  bestfriendsofalltime_lang.html  bookofacts.html  bookofacts.json  bookofacts_lang.html  bookofjohn.html  bookofjohn.json  bookofjohn_lang.html  christisyourlife.json  christisyourlife_lang.html  (+37 more)
src/cpp_app/: CMakeLists.txt  link_http_creator.cpp  link_id_creator.cpp  main.cpp  script_inserter.cpp
src/cpp_app/htmlcxx-0.84/: Makefile  config.h  config.status  htmlcxx.pc  libtool
src/cpp_app/htmlcxx-0.84/css/: Makefile
src/cpp_app/htmlcxx-0.84/html/: Makefile
src/cpp_app/tools/: Commands.cpp  HtmlFP.h  HtmlParser.cpp  HtmlParser.h  Json.cpp  Json.h  SimpleLog.cpp  SimpleLog.h  StringUtils.cpp  StringUtils.h  Types.cpp  Types.h  XmlSink.cpp  XmlSink.h
src/parser/: CMakeLists.txt  Commands.h  HtmlFP.cpp  HtmlParser.cpp  HtmlSource.cpp  HtmlSource.h  Json.cpp  Json.h  StringUtils.cpp  StringUtils.h  Types.cpp  Types.h  XmlSink.cpp  main.cpp
src/parser/htmlcxx-0.84/html/: libhtmlcxx_la-ParserDom.loT
src/parser/htmlcxx-0.84/html/.deps/: libhtmlcxx_la-ParserSax.Plo
(+163 files in other folders)
